srcs/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app: grafana
