srcs/ingress-controller.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-controller
spec:
  rules:
  - host: wordpress.ft.services
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 5050
  - host: phpmyadmin.ft.services
    http:
      paths:
      - path: /
        backend:
          serviceName: phpmyadmin
          servicePort: 5000
